@@ -1,16 +1,0 @@
-description "nginx - high performance web/proxy server"
-
-start on filesystem and static-network-up
-stop on runlevel [016]
-
-expect fork
-respawn
-
-pre-start script
-	[ -x /usr/sbin/nginx ] || { stop; exit 0; }
-	/usr/sbin/nginx -q -t || { stop; exit 0; }
-end script
-
-exec /usr/sbin/nginx
-
-pre-stop exec /usr/sbin/nginx -s quit
